# MIE443_src

./: .gitignore  README.md  compile_commands.json
mie443_contest1/: CMakeLists.txt  README.md  package.xml
mie443_contest1/include/: main_node_class.hpp  map_class.hpp
mie443_contest1/obsolete_code/: contest1.cpp
mie443_contest1/src/: contest1.cpp  main_node_class.cpp  main_node_instance.cpp  map_class.cpp
mie443_contest1/worlds/: world_practice.world
mie443_contest2/: README.md
mie443_contest2/include/: imagePipeline.h  navigation.h
mie443_contest2/src/: contest2.cpp  imagePipeline.cpp  navigation.cpp
mie443_contest3/: README.md
mie443_contest3/include/: explore.h
mie443_contest3/src/: contest3.cpp  emotionClassifier.py  emotionTraining.py  explore.cpp  mdl_best.pth
